# production-balance-printer

PrinterESP32/: .clang-format  README.md  platformio.ini
PrinterESP32/SquareLine/: Printer.sll  Printer.spj
PrinterESP32/SquareLine/assets/: ui_font_Chakra100.c  (+9 more)
PrinterESP32/boards/: esp32-8048S043C copy.json  esp32-8048S043C.json  partitions16Mb.csv  sunton_s3.json
PrinterESP32/src/: SD_CARD.h  lv_conf.h  main.cpp
PrinterESP32/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
PrinterESP32/src/ui/components/: ui_comp_hook.c
PrinterESP32/src/ui/fonts/: ui_font_Kanit50.c  ui_font_sukhumvit30.c
PrinterESP32/src/ui/images/: ui_img_logout5_png.c  ui_img_polipharm2_png.c  ui_img_polipharm_png.c  ui_img_scale_png.c
PrinterESP32/src/ui/screens/: ui_DetailsPage.c  ui_LoadingPage.c  ui_LoginPage.c  ui_MainPage.c
backend/: .gitignore  .prettierrc  Dockerfile  README.md  docker-compose.yml  package.json  server.js
backend/api/: auth-devices.js  auth-web.js  devices.js  handshake.js  web.js
backend/configuration/: mysql_db.js  postgres_db.js
backend/sql/: Count_5Minutes.sql  Count_Days.sql  Count_Miniutes.sql  Count_Week.sql  Count_Year.sql  Dashboard.sql  Dashboard2.sql  Dashboard3.sql  Detail_Summary_Pcs.sql  Details_Gram.sql  Details_Pcs.sql  Production.sql  Products.sql  Repair_Table.sql  average.sql
backend/web/: auth-web.js  sign-in.js
frontend/: README.md  index.html  package-lock.json  package.json  prettier.config.mjs
frontend/src/: app.tsx  config-global.ts  copyright.tsx  global.css  main.tsx
(+350 files in other folders)
